# fundation

./: .gitignore  Cargo.toml  Makefile  README.md  design.drawio  fundation.session.sql
.database/: migration.sql
.deploy/: docker-compose.yaml
analyzer/src/: analyzer.rs  lib.rs
apis/src/repository/: client.rs  dto.rs
crates/analyzer/: Cargo.toml
crates/analyzer/src/: main.rs  noticer.rs
crates/apis/: Cargo.toml
crates/apis/src/: lib.rs  repository.rs
crates/fetcher/: Cargo.toml  Dockerfile
crates/fetcher/src/: fetcher.rs  lib.rs  repository.rs
crates/fetcher/src/fetcher/: dto.rs  fetcher.rs  header.rs  serialize.rs  url.rs
crates/repository/: Cargo.toml  Dockerfile
crates/repository/src/: data.rs  dto.rs  handler.rs  lib.rs
crates/repository/src/data/: fund.rs  fund_nav.rs
crates/repository/src/handler/: fund.rs  fund_nav.rs
crates/repository/tests/: request.http
fetcher/: .env  Cargo.toml  Makefile
fetcher/.config/: cookie
fetcher/src/: dto.rs  fetcher.rs  lib.rs  main.rs  repository.rs  serialize.rs  url.rs
repository/: .dockerignore  .env  Cargo.toml  Makefile
repository/src/: data.rs  main.rs
repository/src/data/: fund_nav.rs
repository/src/handler/: fund.rs  fund_nav.rs
repository/tests/: request.http
