[package]
name = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
