[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
apis = { path = "../apis" }
base64 = "0.22.1"
chrono = "0.4.38"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = "0.12.5"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
tokio = { version = "1.38.1", features = ["full"] }
urlencoding = "2.1.3"
